--- a/styles/style.css
+++ b/styles/style.css
@@ -185,6 +185,18 @@ header{
     justify-content: center;
     align-items: center;
  }
+ .trending{
+    background-image: url('../resources/images/Dots.png');
+    background-repeat: no-repeat;
+    background-size: 10%;
+    background-position: right center;
+ }
+#sale{
+    background-image: url('../resources/images/dream-bg.png');
+    background-repeat: no-repeat;
+    background-size: 7%;
+    background-position-x: 17px;
+ }
  .section-three .section-title{
     margin: 30px;
     font-size: 28px;
@@ -194,7 +206,7 @@ header{
  }
  .trending-left{
     width: 610px;
-    height: 256px;
+    height: 260px;
     border-radius: 15px;
     box-shadow: 0px 0px 40px 0px #00000026;
     padding: 30px;
@@ -208,10 +220,9 @@ header{
     width: 4%;
     position: relative;
     top: 8px;
-    left: 5px;
-     
+    left: 5px; 
  }
- /* .sale{
-     display: flex;
-     flex-direction: column;
- } */
+.sale-right{
+    position: relative;
+    left: 100px;
+}
